# mxcubeqt

./: conda-environment.yml  pyproject.toml
BlissFramework/: Qt4_BaseComponents.py  Qt4_GUISupervisor.py  Qt4_startGUI.py  __init__.py
BlissFramework/Bricks/: Qt4_CatsMaintBrick.py  Qt4_CharParametersBrick.py  Qt4_DigitalZoomBrick.py  Qt4_HutchMenuBrick.py  Qt4_LogBarBrick.py  Qt4_MotorSpinBoxBrick.py  Qt4_ProposalBrick2.py  Qt4_ResolutionBrick.py  Qt4_SampleChangerBrick3.py  Qt4_TaskToolBoxBrick.py  Qt4_TreeBrick.py  Qt4_paramsgui.py
ExampleFiles/HardwareObjects.xml/: beamline-setup.xml  detector-mockup-eiger.xml  gphl-setup.xml  sc-mockup.xml  session.xml
api/: __init__.py
configuration/: example_mxcube_gui.yml
configuration/alba_xaloc13/: mxcube.yml
gui/: BaseLayoutItems.py  GUIBuilder.py  GUISupervisor.py
gui/bricks/: AdvancedBrick.py  CharParametersBrick.py  DetectorStatusBrick.py  EnergyBrick.py  HutchMenuBrick.py  ImageTrackingStatusBrick.py  LogBarBrick.py  MotorSpinBoxBrick.py  ParallelProcessingPreviewBrick.py  PlateManipulatorBrick.py  ProposalBrick.py  TreeBrick.py
gui/ui_files/: acquisition_widget_vertical_layout.ui  acquisition_widget_vertical_simple_layout.ui  advanced_methods_layout.ui  data_path_widget_vertical_layout.ui  xray_imaging_parameters_widget_layout.ui  xray_imaging_results_widget_layout.ui
gui/utils/: GUIDisplay.py  QtImport.py  paramsgui.py  queue_item.py  widget_utils.py
gui/widgets/: acquisition_widget.py  acquisition_widget_simple.py  advanced_results_widget.py  (+25 more)
scripts/: mxcube-py36.yml  mxcube_jupyter_notebook.ipynb
(+161 files in other folders)
